--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,8 @@ dependencyResolutionManagement {
 }
 rootProject.name = "WeatherTestApp"
 include ':app'
+include ':core'
+include ':data'
+include ':features:main'
+include ':features:details'
+include ':features:forecast'
