create di koin network and main viewmodel modules

--- a/features/main/build.gradle
+++ b/features/main/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+
+    // koin
+    implementation "io.insert-koin:koin-android:3.2.0"
 }
