--- a/data/build.gradle
+++ b/data/build.gradle
@@ -32,6 +32,7 @@ android {
 
 dependencies {
 
+    implementation project(path: ':core')
     implementation project(path: ':features:main')
     implementation project(path: ':features:details')
     implementation project(path: ':features:forecast')
