--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 
 dependencies {
 
+    implementation project(path: ':core')
     implementation project(path: ':data')
     implementation project(path: ':features:splash')
     implementation project(path: ':features:main')
